除项目和视频外全部完成

--- a/web/view/contact.html
+++ b/web/view/contact.html
@@ -46,6 +46,8 @@
         .content__img{
             float: left;
             margin-bottom: 30px;
+            width: 430px;
+            height: 610px;
         }
         .content__item {
             float: right;
@@ -112,7 +114,7 @@
             <div class="content__item--text"><a href="mailto:<%=data.email[1]%>"><%=data.email[1]%></a></div>
         </div>
         <div class="content__item content__item--weibo">
-            <a href="<%=data.weiboUrl %>" target="_blank">
+            <a href="<%=data.weiboURL %>" target="_blank">
                 <div class="content__item--text"><%=data.weibo[0]%></div>
                 <div class="content__item--text"><%=data.weibo[1]%></div>
             </a>
