--- a/view/teamminus.html
+++ b/view/teamminus.html
@@ -13,6 +13,7 @@
             height: 100%;
             padding: 0;
             margin: 0;
+            font: 12px/1.5 "Microsoft YaHei","PingFang SC","Helvetica Neue",Helvetica,Arial,sans-serif;
         }
         .bg {
             position: fixed;
