--- a/view/list.html
+++ b/view/list.html
@@ -15,6 +15,8 @@
             background-repeat: no-repeat;
             padding: 0;
             margin: 0;
+            font: 12px/1.5 "Microsoft YaHei","PingFang SC","Helvetica Neue",Helvetica,Arial,sans-serif;
+
         }
 
         .bg {
