--- a/view/project.html
+++ b/view/project.html
@@ -111,13 +111,13 @@
         }
 
         .project__list .swiper-button {
-            width: 20px;
-            height: 20px;
+            width: 12px;
+            height: 12px;
             display: inline-block;
             background-size: cover;
             position: absolute;
             top: 50%;
-            margin-top: -10px;
+            margin-top: -6px;
         }
 
         .project__list .swiper-button-prev {
@@ -166,8 +166,8 @@
         }
 
         .perview .swiper-button-prev {
-            width: 40px;
-            height: 70px;
+            width: 25px;
+            height: 30px;
             background-image: url("../static/img/left.png");
             background-size: 100%;
             left: 5%;
@@ -175,8 +175,8 @@
         }
 
         .perview .swiper-button-next {
-            width: 40px;
-            height: 70px;
+            width: 25px;
+            height: 30px;
             background-image: url("../static/img/right.png");
             background-size: 100%;
             right: 5%;
@@ -229,13 +229,14 @@
         }
 
         .project__info--close {
-            width: 20px;
-            height: 20px;
+            width: 15px;
+            height: 15px;
             position: absolute;
             right: 0;
             background: url("../static/img/close_big.png") no-repeat;
-            background-size: 20px 20px;
+            background-size: 15px 15px;
             background-position: center right;
+            cursor: pointer;
         }
 
         .project__info--text {
