--- a/view/menu.html
+++ b/view/menu.html
@@ -26,10 +26,18 @@
     }
 
     .nav__menu-btn--transition {
+        -ms-transition: 0.5s;
+        -webkit-transition: 0.5s;
+        -o-transition: 0.5s;
+        -moz-transition: 0.5s;
         transition: 0.5s;
     }
 
     .nav--active .nav__menu-btn {
+        -ms-transform:rotate(90deg);
+        -o-transform:rotate(90deg);
+        -moz-transform:rotate(90deg);
+        -webkit-transform:rotate(90deg);
         transform: rotate(90deg);
     }
 
